--- a/css/styles.css
+++ b/css/styles.css
@@ -23,9 +23,9 @@ button {
   marging: 20px auto;
 }
 
-#results-container {
+/* #results-container {
   max-widt: 500px;
   margin: 20px auto;
   padding: 10px;
   background-color: #e3eaa7;
-}
+} */
